--- a/layouts/sectionWrapper/sectionWrapper.module.scss
+++ b/layouts/sectionWrapper/sectionWrapper.module.scss
@@ -11,7 +11,7 @@
 
   @media #{variable.$tablet-and-up} {
     /* box-model */
-    padding: 80px 10px;
+    padding: 80px 20px;
   }
 }
 
